# coreliquid_driver

./: .gitignore  10-msi-coreliquid.rules  99-msi-coreliquid.rules  CMakeLists.txt  PKGBUILD  README.md  io.github.MSICoreliquid.conf  msi-coreliquid-driver.install  msi-coreliquid-widget.install  my_msi_driver.service  my_msi_driver.service.in  my_msi_driver_sleep.sh
doc/: lsusb.txt  usb_dump.txt  usb_list.txt
service/: my_msi_coreliquid_driver.service.in  my_msi_coreliquid_driver@.service.in  my_msi_coreliquid_driver_sleep.sh
src/: coreliquid.c  coreliquid.h  coreliquid_hid.c  coreliquid_hid.h  coreliquid_s.c  coreliquid_s.h  logger.c  logger.h  my_msi_driver.c  sensors_dbus.c  sensors_dbus.h  sensors_wrap.c  sensors_wrap.h
widget/: metadata.json
widget/contents/config/: main.xml
widget/contents/ui/: configGeneral.qml  main.qml
